# binary-ninja-headless-mcp

./: .gitignore  README.md  binary_ninja_headless_mcp.py  pyproject.toml
.github/workflows/: ci.yml
binary_ninja_headless_mcp/: __init__.py  backend.py  cli.py  fake_binja.py  fuzzer.py  server.py
tests/: conftest.py  test_backend.py  test_backend_advanced.py  test_backend_core_additional.py  test_backend_core_extra.py  test_cli_subprocess.py  test_fuzzer.py  test_registry_consistency.py  test_server.py  test_server_advanced.py  test_server_core_additional.py  test_server_core_extra.py
tests/fixtures/: hello.c
